# car_pedestrian_line_detection

./: CMakeLists.txt  README.md  haarcascade_cars2.xml  main.cpp  源.cpp
